testdata/baselines/reference/submodule/conformance/propertyAssignmentUseParentType1.errors.txt
propertyAssignmentUseParentType1.ts(5,14): error TS2322: Type '{ (): true; num: number; }' is not assignable to type 'N'.
  Types of property 'num' are incompatible.
    Type 'number' is not assignable to type '123'.
propertyAssignmentUseParentType1.ts(8,14): error TS2322: Type '{ (): true; nun: number; }' is not assignable to type '{ (): boolean; nun: 456; }'.
  Types of property 'nun' are incompatible.
    Type 'number' is not assignable to type '456'.


==== propertyAssignmentUseParentType1.ts (2 errors) ====
    interface N {
        (): boolean
        num: 123;
    }
    export const interfaced: N = () => true;
                 ~~~~~~~~~~
!!! error TS2322: Type '{ (): true; num: number; }' is not assignable to type 'N'.
!!! error TS2322:   Types of property 'num' are incompatible.
!!! error TS2322:     Type 'number' is not assignable to type '123'.
    interfaced.num = 123;
    
    export const inlined: { (): boolean; nun: 456 } = () => true;
                 ~~~~~~~
!!! error TS2322: Type '{ (): true; nun: number; }' is not assignable to type '{ (): boolean; nun: 456; }'.
!!! error TS2322:   Types of property 'nun' are incompatible.
!!! error TS2322:     Type 'number' is not assignable to type '456'.
    inlined.nun = 456;
    
    export const ignoreJsdoc = () => true;
    /** @type {string} make sure to ignore jsdoc! */
    ignoreJsdoc.extra = 111
    